--- a/view/lot_cost_category_form.xml
+++ b/view/lot_cost_category_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!--The COPYRIGHT file at the top level of this repository             
+<!--The COPYRIGHT file at the top level of this repository
 contains the full copyright notices and license terms. -->
-<form string="Stock Lot Cost Category">
+<form>
     <label name="name"/>
     <field name="name"/>
 </form>
