Delete cost_lines field. Add total_cost field. Change the way we calculate the cost_price, now is a function field.
Task #068419

--- a/view/lot_form.xml
+++ b/view/lot_form.xml
@@ -5,6 +5,7 @@
     <xpath expr="/form/field[@name='product']" position="after">
         <label name="cost_price"/>
         <field name="cost_price"/>
-        <field name="cost_lines" colspan="4"/>
+        <label name="total_cost"/>
+        <field name="total_cost"/>
     </xpath>
 </data>
